# pm-skill

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.json
docs/: codex-integration.md
skills/pm/: README.md  SKILL.md
skills/pm/assisted-skill-execution/: SKILL.md
skills/pm/audit/: SKILL.md
skills/pm/auto-skill-execution/: SKILL.md
skills/pm/cancel/: SKILL.md
skills/pm/execute/: SKILL.md
skills/pm/executing/: SKILL.md
skills/pm/extract-steps/: SKILL.md
skills/pm/finished/: SKILL.md
skills/pm/guided-skill-execution/: SKILL.md
skills/pm/hooks/: README.md  no_direct_mcp_writes.sh  session_start.sh  skip_verifier_requires_note.sh  statusline_capture.sh  stop_with_open_task.py
skills/pm/install/: SKILL.md
skills/pm/next/: SKILL.md
system-models/: README.md  check_enforcement.py  enforcement.yaml  model-isomorphism-check.md  planning.als  planning.dfy  planning_async_verifier.als  planning_async_verifier_same_queue.als  planning_cancel_cascade.als  planning_lease.als  planning_parent_gate.als  planning_plan_race.als  planning_plan_race.dfy  planning_reclaim_cascade.als  planning_replan_with_parent_gate.als
system-models/reports/: alloy-cross-model-soundness.md  alloy-dafny-reconciliation.md  cache-staleness-investigation.md  planning-async-verifier-reconciliation.md  planning-blind-spots.md  planning-enforcement.md  planning-reconciliation.md  proposal-hashharness-bulk-tips.md
system-models/scripts/: check_enforcement.py
tests/: test_limits.py  test_mcp_client_backoff.py
tests/integration/: test_golden.py
(+38 files in other folders)
